# PestCode

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt
code/PestTest/: CMakeLists.txt
code/PestTest/include/: ImageCtrl.h  MainWindow.h
code/PestTest/include/alg/: ImageProcess.h  PestCount.h
code/PestTest/include/common/: ImageData.h
code/PestTest/src/: main.cpp
new_code/: CMakeLists.txt  ImageData_new.h  ImageProcess_new.h  PestCount_new.h  main_pro.cpp
new_code/lib/: jpeg.lib
others/: jpeg.lib
others/atl/include/: atlacc.h  atlbase.h  atlbuild.h  atlcoll.h  atlcomcli.h  atlcore.h  atlctl.h  atldb.h  atldbcli.h  atldbgmem.h  atldbsch.h  atldef.h  atlevent.h  atlimage.h  atlplus.h  atlsecurity.h  atlstr.h  atlsync.h  atltime.h  atlutil.h  atlwin.h  cstringt.h
others/wtl/include/: atlapp.h
pic/photo/: gitHubout.txt  myfile.txt  out.txt
