CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#SET(STRING_CXX_FLAGS "${STRING_CXX_FLAGS} -D_UNICODE /GR-")
#ADD_DEFINITIONS(${STRING_CXX_FLAGS})
#SET(STRING_LINK_FLAGS_TARGET "/SUBSYSTEM:WINDOWS")
#SET(STRING_LINK_FLAGS_TARGET_C "/SUBSYSTEM:CONSOLE")

PROJECT(Pest)
#ADD_SUBDIRECTORY(code code)
ADD_SUBDIRECTORY(new_code new_code)
