INCLUDE_DIRECTORIES(
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${PROJECT_SOURCE_DIR}/new_code"
	)
#LINK_DIRECTORIES("${PROJECT_BINARY_DIR}/bin" "${PROJECT_SOURCE_DIR}/new_code/lib")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(SRC_LIST "${PROJECT_SOURCE_DIR}/new_code/main_pro.cpp")
ADD_EXECUTABLE(PestTest_New ${SRC_LIST})
find_package (Threads)
target_link_libraries (PestTest_New ${CMAKE_THREAD_LIBS_INIT})
SET_TARGET_PROPERTIES(PestTest_New PROPERTIES OUTPUT_NAME "PestTest_New"
	LINK_FLAGS "${STRING_LINK_FLAGS_TARGET_C}")
