INCLUDE_DIRECTORIES(
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${PROJECT_SOURCE_DIR}/code/PestTest/include"
	"${PROJECT_SOURCE_DIR}/others/atl/include"
	"${PROJECT_SOURCE_DIR}/others/wtl/include"
	)
LINK_DIRECTORIES("${PROJECT_BINARY_DIR}/bin" "${PROJECT_SOURCE_DIR}/others/atl/lib/x64")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(SRC_LIST "src/main.cpp")
ADD_EXECUTABLE(PestTest ${SRC_LIST})
SET_TARGET_PROPERTIES(PestTest PROPERTIES OUTPUT_NAME "PestTest"
	LINK_FLAGS "${STRING_LINK_FLAGS_TARGET}")
